WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136555
border-radius should not force layer backing store
https://bugs.webkit.org/show_bug.cgi?id=136555
Summary
border-radius should not force layer backing store
Simon Fraser (smfr)
Reported
2014-09-04 16:04:21 PDT
Created
attachment 237655
[details]
Testcase border-radius forces us to allocate backing store for a layer, and it should not.
Attachments
Testcase
(544 bytes, text/html)
2014-09-04 16:04 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(5.46 KB, patch)
2014-09-04 17:05 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-09-04 17:05:07 PDT
Created
attachment 237660
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-09-04 17:24:03 PDT
https://trac.webkit.org/r173295
Radar WebKit Bug Importer
Comment 3
2014-11-10 09:30:32 PST
<
rdar://problem/18926857
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug